[Extract] Fix loading of default dictionary